apps/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: media
spec:
  ports:
  - name: calibre-web
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: calibre-web
