apps/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    #traefik.ingress.kubernetes.io/router.middlewares: http-to-https-redirect-media@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: calibre-web
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - calibre-web.lab.emc2.build
    secretName: calibre-web-letsencrypt-tls
  rules:
  - host: calibre-web.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: calibre-web
            port:
              number: 8083
        path: /
        pathType: Prefix
